--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-paginate": "^8.1.3",
+    "react-player": "^2.11.0",
     "react-stickynode": "^4.1.0",
     "swiper": "^8.3.1"
   },
