--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-paginate": "^8.1.3",
     "react-player": "^2.11.0",
+    "react-slidedown": "^2.4.7",
     "react-stickynode": "^4.1.0",
     "swiper": "^8.3.1"
   },
