--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-paginate": "^8.1.3",
     "react-player": "^2.11.0",
     "react-stickynode": "^4.1.0",
+    "react-timekeeper": "^2.2.1",
     "swiper": "^8.3.1"
   },
   "devDependencies": {
