--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-player": "^2.11.0",
     "react-stickynode": "^4.1.0",
     "react-timekeeper": "^2.2.1",
+    "react-visibility-sensor": "^5.1.1",
     "swiper": "^8.3.1"
   },
   "devDependencies": {
