--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "react-stickynode": "^4.1.0",
     "react-timekeeper": "^2.2.1",
     "react-visibility-sensor": "^5.1.1",
+    "styled-components": "^5.3.6",
     "swiper": "^8.3.1"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
