--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   // Add those two lines:
   "editor.formatOnSave": true, // Tell VSCode to format files on save
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "cSpell.words": ["headlessui", "swiper"] // Tell VSCode to use Prettier as default file formatter
+  "cSpell.words": ["headlessui", "swiper"],
+  "files.autoSave": "onFocusChange" // Tell VSCode to use Prettier as default file formatter
 }
